# Raman_agntic_ai

./: .env  pyproject.toml
1_Fastapi/: 1_hello_world.py  2_routing_basics.py  3_query_parameter.py  4-bodies_parameter.py  5_file_handling.py  README_assignment_1.md  assignment.py
2-Mongodb/: main.py
group_routing/: db_connection.py  fruits_route.py  main.py  ramzan_route.py
